# Open-Env-DataAgent

./: Dockerfile  Example of .env  README.md  baseline.py  env.py  grader.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
data/: sample.csv
server/: app.py
